	- touch function of DBCatalog moved to proper place
	- empty contents after first edit file node content fixed (#3492344)
	- size optimizions on finddialog
	- option for keeping search result at finddialog added (#3496361)
	- display avi scan info only if avi tech scan is performed
	- scan only for media info if file has supported extension
	- identical media name check at addialog fixed

27. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- allow gui often to refresh
	- only create exif data if its enabled to read exif data
	- status support on rescan event added
	- animate systray icon during scanning added
	- allow to maximize find dialog added
	- hide progress dialog on minimize to tray too
	- allow to faster cancel on scanning
	- hide trayicon before close app

26. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- strip useless trailing slash from selected path on adddialog
	- set last dir name as media name if type is not cd/dvd
	- ask for new media name if media already exists instead of show error message
	- exclude match fixed
	- display regex validity in selreadable dialog
	- display extended status during scanning added (archive scanning, mp3 info, avi info, content, exif data, thumbnail)
	- option for displaying archive file name during archive file in status added
	- updated application icon with multiple sizes and svg added (thanks to Andras Somogyi, #3301448)
	- icon size fixed
	- scanning filesystem by adding new media/rescan can now be cancelled
	- regex help document added at selreadable dialog
	- check exclude rules on live edit too
	- option for use simple wildcard instead regex for exclude added
	- systray icon added

25. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- use real regex instead simple wildcard at exclude rules
	- use listview instead lineedit for exclude rules

24. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- exclude rules are checked against file path instead file name