@@ -6,6 +6,7 @@
 	- display avi scan info only if avi tech scan is performed
 	- scan only for media info if file has supported extension
 	- identical media name check at addialog fixed
+	- identical media name check for cd/dvd added
 
 27. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- allow gui often to refresh
